platforms/macos/Dimmy/DimmyFFI.h

// ── Lifecycle ───────────────────────────────────────────────────────

/// Initialize the Dimmy core. Must be called once before any other function.
/// Returns 0 on success, -1 on error.
int32_t dimmy_init(void);
/// Shut down: stop audio, save config and clean up.
void dimmy_shutdown(void);
/// Register event callback. The native UI provides a function pointer that
/// receives JSON strings for events (recording_progress, chunk_status, etc.).
void dimmy_set_event_callback(void (*_Nonnull cb)(const char * _Nonnull));
// ── Recording ───────────────────────────────────────────────────────

/// Start recording. Returns 0=OK, -1=no API key, -2=already recording.
int32_t dimmy_start_recording(void);
/// Stop recording and get transcript. Returns transcript length, or negative on error.
/// Transcript is written to out_buf (null-terminated).
int32_t dimmy_stop_recording(char * _Nonnull out_buf, int32_t buf_len);
/// Cancel recording without transcribing.
void dimmy_cancel_recording(void);
// ── Config ──────────────────────────────────────────────────────────

/// Get full config as JSON string. Returns length written, or -1 on error.
int32_t dimmy_get_config_json(char * _Nonnull out_buf, int32_t buf_len);
/// Set config from JSON string. Returns 0=OK, -1=error.
int32_t dimmy_set_config_json(const char * _Nonnull json_ptr);
// ── Audio ───────────────────────────────────────────────────────────

/// Get current microphone amplitude (0.0 - 1.0).
float dimmy_get_amplitude(void);
/// Peak amplitude of the secondary (loopback / system audio) buffer.
/// 0.0 when no Mix-mode meeting is active or the buffer is empty.
/// Used by the meeting-window dual-band waveform to render mic + system
/// as two stacked bands so the user sees both streams at a glance.
float dimmy_get_loopback_amplitude(void);
/// Get device list as JSON array. Returns length written, or -1 on error.
int32_t dimmy_list_devices_json(char * _Nonnull out_buf, int32_t buf_len);
/// Check audio device health. Returns JSON with diagnostic info.
int32_t dimmy_check_audio_health(char * _Nonnull out_buf, int32_t buf_len);
// ── LLM ─────────────────────────────────────────────────────────────

/// Cycle LLM style. direction: +1 = next, -1 = previous.
void dimmy_cycle_llm_style(int32_t direction);
/// Cycle LLM tone. direction: +1 = next, -1 = previous.
void dimmy_cycle_llm_tone(int32_t direction);
/// Process text through LLM enhancement. Returns length written to buffer,
/// or -1 on error, 0 if LLM disabled/style=Off.
int32_t dimmy_process_with_llm(const char * _Nonnull text_ptr,
                               char * _Nonnull out_buf,
                               int32_t buf_len);
// ── Stats ───────────────────────────────────────────────────────────

/// Update cumulative stats. Returns 0=OK, -1=invalid input.
int32_t dimmy_update_stats(int32_t words, double speaking_secs);
// ── Local STT ──────────────────────────────────────────────────────

/// Get JSON array of available local models with download status.
/// Returns bytes written, or -1 on error.
int32_t dimmy_list_local_models(char * _Nonnull out_buf, int32_t buf_len);
/// Download a model file. BLOCKING — call from a background thread.
/// Emits "model_download_progress" events via the event callback.
/// Returns 0 on success, -1 on error.
int32_t dimmy_download_model(const char * _Nonnull filename);
/// Check if a specific model file exists locally.
/// Returns 1=yes, 0=no.
int32_t dimmy_model_exists(const char * _Nonnull filename);
// ── Parakeet TDT v3 FP32 (alternative local STT backend) ────────────

/// 1 = the Parakeet FP32 bundle (~2.5 GB) is fully on disk, 0 otherwise.
int32_t dimmy_parakeet_bundle_present(void);
/// Download the Parakeet bundle into the dimmy config dir. BLOCKING —
/// call from a background thread. Emits "parakeet_bundle_download_progress"
/// events with {downloaded,total}. Returns 0=OK, -1=error.
int32_t dimmy_parakeet_download_bundle(void);
// ── Local LLM ────────────────────────────────────────────────────────

/// Get JSON array of available local LLM models with download status.
int32_t dimmy_list_llm_models(char * _Nonnull out_buf, int32_t buf_len);
/// Download an LLM model file. BLOCKING — call from background thread.
int32_t dimmy_download_llm_model(const char * _Nonnull filename);
/// Check if a specific LLM model file exists locally. Returns 1=yes, 0=no.
int32_t dimmy_llm_model_exists(const char * _Nonnull filename);
// ── Transcription History ──────────────────────────────────────────

/// Save a transcript to history. Returns transcript ID, or -1 on error.
int32_t dimmy_history_save(const char * _Nonnull text,
                           const char * _Nullable language,
                           double duration);
/// Get recent transcripts as JSON array. Returns bytes written, or -1 on error.
int32_t dimmy_history_recent(int32_t limit,
                             char * _Nonnull out_buf,
                             int32_t buf_len);
/// Search transcripts via full-text search. Returns bytes written, or -1 on error.
int32_t dimmy_history_search(const char * _Nonnull query,
                             int32_t limit,
                             char * _Nonnull out_buf,
                             int32_t buf_len);
/// Delete a transcript by ID. Returns 0=OK, -1=error.
int32_t dimmy_history_delete(int32_t id);
/// Get history stats as JSON. Returns bytes written, or -1 on error.
int32_t dimmy_history_stats(char * _Nonnull out_buf, int32_t buf_len);
// ── Diagnostics / GPU ──────────────────────────────────────────────

/// Probe default input device + record a few ms of audio to flag issues.
/// Returns bytes written to a JSON status report, or -1 on error.
int32_t dimmy_check_audio_health(char * _Nonnull out_buf, int32_t buf_len);
/// GPU known-bad marker status as JSON. Returns bytes written, or -1.
int32_t dimmy_gpu_get_status(char * _Nonnull out_buf, int32_t buf_len);
/// Clear the known-bad GPU marker so we re-probe Metal next launch.
int32_t dimmy_gpu_clear_known_bad(void);
// ── App context (foreground-app rules) ───────────────────────────

/// Push the foreground-app snapshot captured at hotkey-down. JSON shape:
///   {"process_name":"","bundle_id":"com.tinyspeck.slackmacgap","wm_class":""}
/// Returns 0 on success, non-zero on parse error.
int32_t dimmy_set_app_context(const char * _Nullable json_ptr);
/// Clear the foreground-app snapshot. Call after transcription completes
/// so a stale snapshot can't bleed into the next recording.
void dimmy_clear_app_context(void);
// ── Audio file load ──────────────────────────────────────────────

/// Synchronously transcribe a WAV file via the active local STT
/// backend. Returns transcript length on success, negative on error.
/// Emits `file_transcribe_progress` events between chunks. Cloud mode
/// is unsupported via this entry point (returns -4).
int32_t dimmy_transcribe_file(const char * _Nonnull path_ptr,
                              char * _Nonnull out_buf,
                              int32_t buf_len);
// ── Meeting mode ─────────────────────────────────────────────────

/// Start a meeting recording. Returns the session id length on success;
/// -1 already-active or unable to lock; -3 audio/session start failure.
int32_t dimmy_meeting_start(char * _Nonnull out_buf, int32_t buf_len);
/// Stop the active meeting. Returns JSON with id/dir/transcript/
/// duration_secs/chunk_count/error. Negative on error / no active session.
int32_t dimmy_meeting_stop(char * _Nonnull out_buf, int32_t buf_len);
/// Persist the LLM-produced recap + actions (+ optional translation) into
/// the meeting directory. Pass nulls/empty to skip a field. 0 ok, -1 error.
/// `model_ptr` names the model that wrote the recap and is recorded in the
/// machine-readable AI-generated marker; pass null when it is unknown (a
/// wrong attribution is worse than none). The core strips a `cloud:` /
/// `local:` picker prefix, so pass the override value verbatim.
int32_t dimmy_meeting_save_post_process(const char * _Nonnull dir_ptr,
                                        const char * _Nullable recap_ptr,
                                        const char * _Nullable actions_ptr,
                                        const char * _Nullable translated_ptr,
                                        const char * _Nullable model_ptr);
/// JSON array of orphaned meeting directories (`.recording` marker still
/// present from a crashed session). UI can offer "recover meeting?".
int32_t dimmy_meeting_list_orphans(char * _Nonnull out_buf, int32_t buf_len);
/// 1 = a meeting is currently active, 0 otherwise. Used to gate the
/// dictation hotkey while a meeting is recording (cpal collision).
int32_t dimmy_meeting_is_active(void);
/// Pause the active meeting. While paused the worker keeps cpal capturing
/// (we don't bounce the streams — that races with device acquisition on
/// resume) but skips WAV writes + STT chunks. On resume, the worker
/// advances its cursors past the gap so the paused window is excluded
/// from `audio.wav` and from the chunked transcript timeline; a
/// `[paused N ms]` line lands in `transcripts.txt` at the seam.
///
/// Return-code contract:
///   1  → state actually flipped (was running, now paused)
///   0  → no-op (already paused, or no meeting active)
///  -1  → internal lock failure (rare)
int32_t dimmy_meeting_pause(void);
/// Resume a paused meeting. Idempotent: same return-code contract as
/// `dimmy_meeting_pause` (1 flipped, 0 no-op, -1 lock failure).
int32_t dimmy_meeting_resume(void);
/// 1 if the active meeting is currently paused, 0 otherwise (including
/// no meeting active). Used to render the Pause/Resume button correctly
/// when re-attaching to an in-flight meeting (e.g. window reopened
/// while a meeting started from the pill is still running).
int32_t dimmy_meeting_is_paused(void);
// ── Raw LLM call (bypasses dictation rewrite) ────────────────────

/// Send `prompt` to the configured LLM endpoint without the dictation
/// llm_style wrapper. `model_override` (nullable / empty for "use the
/// configured api_model") lets the caller pick a stronger model for
/// recap quality. Returns response byte length, or:
///   -1 invalid args, -2 missing config, -3 HTTP/parse error.
int32_t dimmy_llm_call_raw(const char * _Nonnull prompt_ptr,
                           const char * _Nullable model_override_ptr,
                           int32_t max_tokens,
                           char * _Nonnull out_buf,
                           int32_t buf_len);
// ── History v2 update hooks ──────────────────────────────────────

/// Backfill the `enhanced_text` column for the row created by the most
/// recent `dimmy_history_save`. Empty/null clears the column. 0 ok, -1 err.
int32_t dimmy_history_update_enhanced(int32_t id, const char * _Nullable text_ptr);
/// Set the `word_timestamps` JSON column (caller serialises the array).
/// Empty/null clears. 0 ok, -1 err.
int32_t dimmy_history_update_word_timestamps(int32_t id, const char * _Nullable json_ptr);
/// Set audio_path + size_bytes when audio retention writes a WAV. Pass
/// null path to unlink. 0 ok, -1 err.
int32_t dimmy_history_update_audio(int32_t id,
                                   const char * _Nullable path_ptr,
                                   int64_t size_bytes);