platforms/windows/Dimmy.Windows/Interop/DimmyNative.cs

using System;
using System.Runtime.InteropServices;

namespace Dimmy.Windows.Interop;

/// <summary>
/// P/Invoke declarations for all 15 FFI functions exported by dimmy.dll (Rust cdylib).
/// See core/src/ffi.rs for the Rust side.
/// </summary>
public static class DimmyNative
{
    private const string DLL = "dimmy_lib";

    // ── Callback delegate ────────────────────────────────────────────
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void EventCallback(IntPtr jsonPtr);

    // ── Lifecycle ────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_init();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_shutdown();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_set_event_callback(EventCallback cb);

    // ── Recording ────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_start_recording();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_stop_recording(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_cancel_recording();

    // ── Config ───────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_get_config_json(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_set_config_json(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    // ── GPU diagnostics ──────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_gpu_get_status(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_gpu_clear_known_bad();

    // ── Audio ────────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern float dimmy_get_amplitude();

    /// Peak amplitude of the SECONDARY (loopback / system) audio buffer.
    /// Returns 0.0 when no Mix recording is active. Used by the meeting
    /// window dual-band waveform to draw mic + system as separate bands.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern float dimmy_get_loopback_amplitude();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_list_devices_json(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_check_audio_health(byte[] outBuf, int bufLen);

    // ── LLM ──────────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_cycle_llm_style(int direction);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_cycle_llm_tone(int direction);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_process_with_llm(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        byte[] outBuf, int bufLen);

    // ── Stats ────────────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_update_stats(int words, double speakingSecs);

    // ── Local STT model management ──────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_list_local_models(byte[] buf, int len);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_download_model(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_model_exists(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    // ── Local LLM model management ────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_list_llm_models(byte[] buf, int len);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_download_llm_model(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_llm_model_exists(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    // ── Parakeet TDT v3 FP32 (alternative local STT backend) ─────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_parakeet_bundle_present();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_parakeet_download_bundle();

    // ── App context ──────────────────────────────────────────────
    /// Push the foreground-app snapshot so the Rust core can resolve
    /// app_rules at LLM-enhance time. JSON shape:
    ///   { "process_name": "slack.exe", "bundle_id": "", "wm_class": "" }
    /// Pass any subset of keys; missing ones default to empty string.
    /// Returns 0 on success, non-zero on parse error.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl,
        CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern int dimmy_set_app_context(
        [MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_clear_app_context();

    // ── History ──────────────────────────────────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_save(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string language,
        double duration);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_recent(int limit, byte[] buf, int len);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_search(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
        int limit, byte[] buf, int len);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_delete(int id);

    // ── File-load transcription (offline) ────────────────────────
    /// Synchronously transcribe a WAV file using the active local
    /// backend. See core/src/ffi.rs::dimmy_transcribe_file for return
    /// codes. On success the transcript is written to `outBuf` and
    /// the function returns its byte length.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_transcribe_file(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_update_enhanced(
        int id,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? text);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_update_audio(
        int id,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? path,
        long sizeBytes);

    /// Set the word_timestamps JSON column for a history row.
    /// Caller serialises `[{"word":"...","start_ms":N,"end_ms":N}]`.
    /// Empty / null clears the field. Returns 0 on success, -1 on error.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_update_word_timestamps(
        int id,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? json);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_history_stats(byte[] buf, int len);

    // ── Meeting mode (long-form recording) ───────────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_start(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_stop(byte[] outBuf, int bufLen);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_save_post_process(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string dir,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? recap,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? actions,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? translated);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_list_orphans(byte[] outBuf, int bufLen);

    /// 1 = meeting currently recording; 0 = no active meeting. Used
    /// to gate the dictation hotkey so a parallel recording can't
    /// corrupt the shared cpal audio buffer.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_is_active();

    /// Pause / resume the in-flight meeting. cpal streams keep running
    /// in the background, but the meeting worker stops writing the WAV
    /// files / emitting STT chunks. On resume the worker advances past
    /// the paused window so the gap is excluded from the audio + the
    /// transcript timeline; a `[paused N ms]` marker is written into
    /// transcripts.txt at the seam.
    /// Returns 1 if state flipped, 0 if no-op (already in target state
    /// or no meeting active), -1 internal failure.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_pause();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_resume();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_meeting_is_paused();

    /// Raw LLM call — bypasses the dictation rewrite wrapper. Pass
    /// empty string for `modelOverride` to use the user-configured
    /// llm_api_model. Used by meeting recap + audio-load summarizer.
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_llm_call_raw(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string prompt,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string modelOverride,
        int maxTokens,
        byte[] outBuf, int bufLen);

    // ── Hotkey (low-level keyboard hook via Rust) ─────────────────
    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_hotkey_install();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_hotkey_set(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string combo);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_hotkey_take_event();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_hotkey_start_recording();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_hotkey_poll_recording();

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern int dimmy_hotkey_take_recorded(byte[] buf, int len);

    [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
    public static extern void dimmy_hotkey_stop_recording();
